refactor Definition block

--- a/src/content/docs/en/aima-002.mdx
+++ b/src/content/docs/en/aima-002.mdx
@@ -4,12 +4,11 @@ title: "Intelligent Agents"
 
 ## Agents and Environments
 
-<Definition
-    term="Agent"
-    definition="An agent is anything that can be viewed as perceiving its environment through sensors and acting upon that environment through actuators."
-    source="Artificial Intelligent a Modern Approach - Chapter 2 section 1"
-    link=""
-/>
+<Definition term="Agent">
+An agent is anything that can be viewed as perceiving its environment through sensors and acting upon that environment through actuators.
+
+Source: Artificial Intelligent a Modern Approach - Chapter 2 section 1
+</Definition>
 
 **agent function** maps from any percept sequence to an action.
 
@@ -17,11 +16,10 @@ Just keep in mind that the term **agent** is just a analytical tool.
 
 ## Good Behaviour: The Concept of Rationality
 
-<Definition
-    term="rational agent"
-    definition="A rational agent is one that does the 'right thing'."
-    source="Artificial Intelligent a Modern Approach - Section 2.2"
-    link=""
-/>
+<Definition term="rational agent">
+A rational agent is one that does the 'right thing'.
+
+Source: Artificial Intelligent a Modern Approach - Section 2.2
+</Definition>
 
 
