--- a/src/content/docs/en/aima-003.mdx
+++ b/src/content/docs/en/aima-003.mdx
@@ -157,11 +157,11 @@ Side node: A* was develop for [Shakey](https://www.computerhistory.org/revolutio
 
 #### Proof Admissibility of A*
 
-<Definition
-term="Admissibility"
-definition="We call an algorithm *admissible* if it is guaranteed to find a **optimal path** from $n$ to a preferred goal node of $n$ for any $\epsilon$ graph."
-source="A Formal Basis for the Heuristic Determination of Minimum Cost Paths. Section I. Subsection C. Algorithms for Finding Minimun Cost Paths"
-/>
+<Definition term="Admissibility">
+We call an algorithm *admissible* if it is guaranteed to find a **optimal path** from $n$ to a preferred goal node of $n$ for any $\epsilon$ graph.
+
+Source: "A Formal Basis for the Heuristic Determination of Minimum Cost Paths. Section I. Subsection C. Algorithms for Finding Minimun Cost Paths"
+</Definition>
 
 The valuation function on A*:
 
