--- a/src/content/docs/en/complexity-theory.mdx
+++ b/src/content/docs/en/complexity-theory.mdx
@@ -15,11 +15,11 @@ For example the function $f(n) = 6n^3 + 2n^2 + 20n + 45$, the highest order term
 
 The following is a formal definition of $big-O$:
 
-<Definition
-    term="big-O"
-    definition="Let $f, g : \sN \rightarrow \sR^{+}$. Say that $f(n) = O(g(n))$  if positive integers $c$ and $n_0$ exist such that for every integer $n ≥ n_0$, $f (n) ≤ c g(n)$."
-    source="Definition 7.2 from Introduction to the Theory of Computation by Michael Sipser"
-/>
+<Definition term="big-O">
+Let $f, g : \sN \rightarrow \sR^{+}$. Say that $f(n) = O(g(n))$  if positive integers $c$ and $n_0$ exist such that for every integer $n ≥ n_0$, $f (n) ≤ c g(n)$.
+
+Source: Definition 7.2 from Introduction to the Theory of Computation by Michael Sipser
+</Definition>
 
 When $f(n) = O(g(n))$ we way that $g(n)$ is an **upper bound** for $f(n)$, or more precisely, that $g(n)$ is an **asymptotic upper bound** for $f(n)$.
 
