--- a/src/content/docs/en/control-002.mdx
+++ b/src/content/docs/en/control-002.mdx
@@ -7,11 +7,11 @@ description: "Overview"
 ## Introduction
 
 <Slide>
-<Definition
-    term="A mathematical model of a dynamic system"
-    definition="Set of equations that represents the dynamics of the system accurately, or at least fairly well."
-    source="Modern Control Engineering, Section 2.1 by Ogata"
-/>
+<Definition term="A mathematical model of a dynamic system">
+Set of equations that represents the dynamics of the system accurately, or at least fairly well.
+
+Source: Modern Control Engineering, Section 2.1 by Ogata
+</Definition>
 
 A mathematical model is:
 - Not unique: A system may be represented in many different ways.
