--- a/src/content/docs/en/cpp-build.mdx
+++ b/src/content/docs/en/cpp-build.mdx
@@ -26,12 +26,11 @@ You can run the full build process with the following command:
 
 ### Pre-processor
 
-<Definition
-    term="pre-processor"
-    definition="The preprocessor performs preliminary operations on C and C++ files before they are passed to the compiler."
-    source="C/C++ preprocessor reference"
-    link="https://learn.microsoft.com/en-us/cpp/preprocessor/c-cpp-preprocessor-reference?view=msvc-170"
-/>
+<Definition term="pre-processor">
+The preprocessor performs preliminary operations on C and C++ files before they are passed to the compiler.
+
+Source: [C/C++ preprocessor reference](https://learn.microsoft.com/en-us/cpp/preprocessor/c-cpp-preprocessor-reference?view=msvc-170)
+</Definition>
 
 [Minimal example](https://github.com/harleylara/cpp-intro/blob/master/001-intro/main.cpp)
 <Terminal
