--- a/src/content/docs/en/cs-intro.mdx
+++ b/src/content/docs/en/cs-intro.mdx
@@ -5,11 +5,11 @@ description: My notes from lecture
 
 ## Language
 
-<Definition
-    term="Alphabet"
-    definition="A finite, non-empty set of objects called **symbols**"
-    source="Introduction to the theory of computation Section 0.2 'Strings and Languages' by Michael Sipser"
-/>
+<Definition term="Alphabet">
+A finite, non-empty set of objects called **symbols**
+
+Source: Introduction to the theory of computation Section 0.2 'Strings and Languages' by Michael Sipser
+</Definition>
 
 <Equation
     formula="\Sigma_1= \{0, 1\} \\ \Sigma_2 = \{\textrm{a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z}\}"
