--- a/src/content/docs/en/cuda.mdx
+++ b/src/content/docs/en/cuda.mdx
@@ -68,12 +68,11 @@ INSERT THE CODE DEMO HERE
 
 Check for CUDA devices and **capabilities** (or "Compute Capabilities")
 
-<Definition
-    term="Compute Capabilities"
-    definition="Set of specifications and features of a compute device depend on."
-    source="CUDA C Programming Guide"
-    url="https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#compute-capabilities"
-/>
+<Definition term="Compute Capabilities">
+Set of specifications and features of a compute device depend on.
+
+Source: [CUDA C Programming Guide](https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#compute-capabilities)
+</Definition>
 
 ## External Resources
 
