--- a/src/content/docs/en/dl-004.mdx
+++ b/src/content/docs/en/dl-004.mdx
@@ -41,12 +41,11 @@ import NonLinearModel from "../../../components/DeepLearning/NonLinearModel.astr
 
 ### Likelihood Functions
 
-<Definition
-    term="Likelihood Function"
-    definition="Is the joint probability mass (or probability density) of observed data viewed as a function of the parameters of a statistical model."
-    source="Likelihood function - Wikipedia"
-    link="https://en.wikipedia.org/wiki/Likelihood_function"
-/>
+<Definition term="Likelihood Function">
+Is the joint probability mass (or probability density) of observed data viewed as a function of the parameters of a statistical model.
+
+Source: [Likelihood function - Wikipedia](https://en.wikipedia.org/wiki/Likelihood_function)
+</Definition>
 
 ## References
 
