--- a/src/content/docs/en/fnd-linear-algebra.mdx
+++ b/src/content/docs/en/fnd-linear-algebra.mdx
@@ -10,11 +10,11 @@ import DotProduct from "../../../components/LinearAlgebra/DotProduct.astro"
 
 ## Scalar
 
-<Definition
-    definition="A scalar is a one-component quantity that is invariant under rotations of the coordinate system."
-    source="Scalar - Mathworld Wolfram"
-    link="https://mathworld.wolfram.com/Scalar.html"
-/>
+<Definition term="scalar">
+A scalar is a one-component quantity that is invariant under rotations of the coordinate system.
+
+Source: [Scalar - Mathworld Wolfram](https://mathworld.wolfram.com/Scalar.html)
+</Definition>
 
 <Equation
     formula="a"
@@ -23,11 +23,11 @@ import DotProduct from "../../../components/LinearAlgebra/DotProduct.astro"
 
 ## Vector
 
-<Definition 
-    definition="In mathematics, physics, and engineering, a Euclidean vector or simply a vector (sometimes called a geometric vector or spatial vector) is a geometric object that has magnitude (or length) and direction."
-    source="Euclidean vector  - Wikipedia"
-    link="https://en.wikipedia.org/wiki/Euclidean_vector"
-/>
+<Definition term="vector">
+In mathematics, physics, and engineering, a Euclidean vector or simply a vector (sometimes called a geometric vector or spatial vector) is a geometric object that has magnitude (or length) and direction.
+
+source: [Euclidean vector  - Wikipedia](https://en.wikipedia.org/wiki/Euclidean_vector)
+</Definition>
 
 <Equation
     formula="\vx = \begin{bmatrix} x_1 \\ x_2 \\ \vdots \\ x_n \end{bmatrix}"
