--- a/src/content/docs/en/nn-intro.mdx
+++ b/src/content/docs/en/nn-intro.mdx
@@ -129,11 +129,11 @@ Information in the world:
 
 ### Adding Information Into the Architecture
 
-<Definition
-    term="Receptive field"
-    definition="The receptive field of a neuron is defined as that region of the input field over which the incoming stimuli can influence the output signal produced by the neuron."
-    source="Haykin & Haykin (2009)"
-/>
+<Definition term="Receptive field">
+The receptive field of a neuron is defined as that region of the input field over which the incoming stimuli can influence the output signal produced by the neuron.
+
+Source: Haykin & Haykin (2009)
+</Definition>
 
 ### Build Invariances
 
