--- a/src/content/docs/en/robot-learning-overview.mdx
+++ b/src/content/docs/en/robot-learning-overview.mdx
@@ -79,12 +79,11 @@ Outline:
 - Types of feedback
 - Sorts of knowledge need to be learned (credit assignment)
 
-<Definition
-    term="Robot Learning Problem"
-    definition="Generally speaking, the robot learning problem is to infer a mapping from sensors/states to actions given a training sequence of sensory inputs, action outputs, and feedback values."
-    source="Robot Learning by Jonathan H. Connell and Sridhar Mahadevan"
-    link="https://link.springer.com/book/10.1007/978-1-4615-3184-5"
-/>
+<Definition term="Robot Learning Problem">
+Generally speaking, the robot learning problem is to infer a mapping from sensors/states to actions given a training sequence of sensory inputs, action outputs, and feedback values.
+
+Source: [Robot Learning by Jonathan H. Connell and Sridhar Mahadevan](https://link.springer.com/book/10.1007/978-1-4615-3184-5)
+</Definition>
 
 <Equation
     formula="\pi: S \rightarrow A"
