--- a/src/content/docs/en/ros2-ds.mdx
+++ b/src/content/docs/en/ros2-ds.mdx
@@ -2,12 +2,11 @@
 title: "Middlewares and Distributed Systems"
 ---
 
-<Definition
-    term="Distributed Systems"
-    definition="A distributed system is a collection of autonomous computing elements that appears to its users as a single coherent system."
-    source="Distributed Systems 3rd edition, section 1.1"
-    link="https://www.distributed-systems.net/index.php/books/ds3/"
-/>
+<Definition term="Distributed Systems">
+A distributed system is a collection of autonomous computing elements that appears to its users as a single coherent system.
+
+Source: [Distributed Systems 3rd edition, section 1.1](https://www.distributed-systems.net/index.php/books/ds3/)
+</Definition>
 
 "computing elements" -> Nodes (cool right?)
 
