--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -54,12 +54,11 @@ Here an official blog about [Why ROS](https://www.ros.org/blog/why-ros/).
 
 ## What is ROS 
 
-<Definition
-term="Robot Operating System (ROS)"
-definition="Is an open source *middleware* suit, and although ROS is not an operating system it has hardware abstraction functions, low-level device control, inter-process communication, package management, network communication and a wide range of macros, making it a flexible framework for robot software development, with a collection of tools, libraries and conventions that adapt to a wide variety of robotic platforms, with the aim of simplifying the task of creating complex and robust robotic systems."
-source="Official ROS website"
-link="https://www.ros.org"
-/>
+<Definition term="Robot Operating System (ROS)">
+Is an open source *middleware* suit, and although ROS is not an operating system it has hardware abstraction functions, low-level device control, inter-process communication, package management, network communication and a wide range of macros, making it a flexible framework for robot software development, with a collection of tools, libraries and conventions that adapt to a wide variety of robotic platforms, with the aim of simplifying the task of creating complex and robust robotic systems.
+
+Source: [Official ROS website](https://www.ros.org)
+</Definition>
 
 More about *middleware* later.
 
@@ -117,12 +116,11 @@ Is correctly spelled with a space: `ROS 2` or `ROS 1`, check the [Trademark Rule
 
 ## ROS Distributions 
 
-<Definition
-    term="ROS distribution, or just ROS distro"
-    definition="A ROS distribution is a **versioned** set of ROS **packages**."
-    source="Distributions | Official documentation."
-    link="https://docs.ros.org/en/humble/Releases.html"
-/>
+<Definition term="ROS distribution, or just ROS distro">
+    A ROS distribution is a **versioned** set of ROS **packages**.
+
+    Source: [Distributions | Official documentation.](https://docs.ros.org/en/humble/Releases.html)
+</Definition>
 
 <Drawio
     file="ros.drawio"
