--- a/src/content/docs/en/ros2-nodes.mdx
+++ b/src/content/docs/en/ros2-nodes.mdx
@@ -13,12 +13,11 @@ description: "Creating nodes"
 
 ## What is a Node
 
-<Definition
-    term="ROS Node"
-    definition="A node is a process that performs computation, and uses a client library to communicate with other nodes. Nodes are combined together into a graph and communicate with one another using streaming topics, RPC services, and the Parameter Server."
-    source="Combined definition from ROS official docs."
-    link="https://wiki.ros.org/Nodes"
-/>
+<Definition term="ROS Node">
+A node is a process that performs computation, and uses a client library to communicate with other nodes. Nodes are combined together into a graph and communicate with one another using streaming topics, RPC services, and the Parameter Server.
+
+Source: [Combined definition from ROS official docs.](https://wiki.ros.org/Nodes)
+</Definition>
 
 Sources: [About Nodes - ROS2 Docs](https://docs.ros.org/en/humble/Concepts/Basic/About-Nodes.html#nodes), [Nodes - ROS Wiki](https://wiki.ros.org/Nodes).
 
