--- a/src/content/docs/en/ros2-pkgs.mdx
+++ b/src/content/docs/en/ros2-pkgs.mdx
@@ -5,12 +5,11 @@ description: "Managing ROS packages"
 
 ## Packages in ROS 2
 
-<Definition
-term="ROS package"
-definition="A ROS package is an organizational unit for your code, configuration files and any other resources necessary for the proper operation of your code."
-source="Own definition inspired by Creating a package - ROS docs"
-link="https://docs.ros.org/en/humble/Tutorials/Beginner-Client-Libraries/Creating-Your-First-ROS2-Package.html"
-/>
+<Definition term="ROS package">
+A ROS package is an organizational unit for your code, configuration files and any other resources necessary for the proper operation of your code.
+
+Source: [Own definition inspired by Creating a package - ROS docs](https://docs.ros.org/en/humble/Tutorials/Beginner-Client-Libraries/Creating-Your-First-ROS2-Package.html)
+</Definition>
 
 <Think
 note="Why do we need a so called 'ROS Package'?"
