--- a/src/content/docs/en/subjective-computing.mdx
+++ b/src/content/docs/en/subjective-computing.mdx
@@ -5,12 +5,11 @@ description: Exploration
 
 Subjective computing is a combination of the topic **subjective statistics** and **scientific computing**. These two fields provide with the set of tools to solved computational problems with data.
 
-<Definition
-    term="Inverse problem"
-    definition="The problem of retrieving information of unknown quantities by indirect observations."
-    source="Introduction to Bayesian Scientific Computing"
-    link="https://link.springer.com/book/10.1007/978-0-387-73394-4"
-/>
+<Definition term="Inverse problem">
+The problem of retrieving information of unknown quantities by indirect observations.
+
+Source: [Introduction to Bayesian Scientific Computing](https://link.springer.com/book/10.1007/978-0-387-73394-4)
+</Definition>
 
 For example [Pierre-Simon Laplace](https://en.wikipedia.org/wiki/Pierre-Simon_Laplace) who estimated the mass of planets from astronomical observations, see [Memoir on the probability of the causes of events](https://www.york.ac.uk/depts/maths/histstat/memoir1774.pdf)
 
