--- a/src/content/docs/en/swarm.mdx
+++ b/src/content/docs/en/swarm.mdx
@@ -4,10 +4,9 @@ title: Swarm Robotics
 
 ## Introduction to Swarm Robotics
 
-<Definition
-    term="Swarm Robotics"
-    definition="Swarm robotics is the study of how to make robots collaborate to collectively solve a task, that would otherwise be impossible to solve by a single individual of these robots."
-/>
+<Definition term="Swarm Robotics">
+Swarm robotics is the study of how to make robots collaborate to collectively solve a task, that would otherwise be impossible to solve by a single individual of these robots.
+</Definition>
 
 Source: @hamannSwarmRoboticsFormal2018
 
@@ -18,10 +17,9 @@ Size:
     description="Plausible range for a swarm system."
 />
 
-<Definition
-    term="Swarm Robotics"
-    definition="Is the study of how a large number of 'relatively simple' physically embodied agents can be designed such that a desited collective behavior emerges."
-/>
+<Definition term="Swarm Robotics">
+"Is the study of how a large number of 'relatively simple' physically embodied agents can be designed such that a desited collective behavior emerges."
+</Definition>
 
 Section 1.1.3 @hamannSwarmRoboticsFormal2018
 
