--- a/src/content/docs/en/usd.mdx
+++ b/src/content/docs/en/usd.mdx
@@ -4,22 +4,20 @@ title: USD (Universal Scene Description)
 
 ## Prims
 
-<Definition
-    term="Prim"
-    definition="A Prim is the primary container object in USD: prims can contain (and order) other prims, creating a “namespace hierarchy” on a **[Stage](#stage)**, and prims can also contain (and order) properties that hold meaningful data."
-    source="USD - Glossary"
-    link="https://openusd.org/release/glossary.html#id417"
-/>
+<Definition term="Prim">
+    A Prim is the primary container object in USD: prims can contain (and order) other prims, creating a “namespace hierarchy” on a **[Stage](#stage)**, and prims can also contain (and order) properties that hold meaningful data.
+
+Source: [USD - Glossary](https://openusd.org/release/glossary.html#id417)
+</Definition>
 
 
 ## Layer
 
-<Definition
-    term="Layer"
-    definition="A Layer is the atomic persistent container of scene description for USD."
-    source="USD - Glossary"
-    link="https://openusd.org/release/glossary.html#usdglossary-layer"
-/>
+<Definition term="Layer">
+A Layer is the atomic persistent container of scene description for USD.
+
+Source: [USD - Glossary](https://openusd.org/release/glossary.html#usdglossary-layer)
+</Definition>
 
 - `.usda`: ASCII Text, human-readable format
 - `.usdc`: USD Crate file format. High performance binary not human-readable format
@@ -28,12 +26,11 @@ title: USD (Universal Scene Description)
 
 ## Stage
 
-<Definition
-    term="Stage"
-    definition="A stage is the USD abstraction for a scenegraph derived from a root USD file."
-    source="USD - Glossary"
-    link="https://openusd.org/release/glossary.html#usdglossary-stage"
-/>
+<Definition term="Stage">
+A stage is the USD abstraction for a scenegraph derived from a root USD file.
+
+Source: [USD - Glossary](https://openusd.org/release/glossary.html#usdglossary-stage)
+</Definition>
 
 ## External Resources
 
