--- a/src/content/docs/en/control-001.mdx
+++ b/src/content/docs/en/control-001.mdx
@@ -3,31 +3,29 @@ title: "Introduction to Control"
 description: "Overview"
 ---
 
-<Presentation>
-
 ## Basic Concepts and Terminology
 
 ### System
 
-<Definition
-    term="System"
-    definition="Interconnections of elements and devices for a desired purpose."
-    source="Modern Control System 13th edition by Richard C. Dorf and Robert H. Bishop"
-/>
+<Definition term="System">
+    Interconnections of elements and devices for a desired purpose.
 
-<Definition
-    term="System"
-    definition="A control system consists of subsystems and processes (or plants) assembled for the purpose of obtaining a **desired output** with **desired performance**, given a **specified input**."
-    source="Control System Engineering, Nise (2015)"
-/>
+    Source: Modern Control System 13th edition by Richard C. Dorf and Robert H. Bishop
+</Definition>
+
+<Definition term="System">
+A control system consists of subsystems and processes (or plants) assembled for the purpose of obtaining a **desired output** with **desired performance**, given a **specified input**.
+
+Source: Control System Engineering, Nise (2015)
+</Definition>
 
 Other definition,
 
-<Definition
-    term="System"
-    definition="A system is a combination of components that act together and perform a certain objective. A system need not be physical. The concept of the system can be applied to abstract, dynamic phenomena such as those encountered in economics. The word system should, therefore, be interpreted to imply physical, biological, economic, and the like, systems."
-    source="Modern Control Engineering 5th edition by Katsuhiko Ogata"
-/>
+<Definition term="System">
+A system is a combination of components that act together and perform a certain objective. A system need not be physical. The concept of the system can be applied to abstract, dynamic phenomena such as those encountered in economics. The word system should, therefore, be interpreted to imply physical, biological, economic, and the like, systems.
+
+Source: Modern Control Engineering 5th edition by Katsuhiko Ogata
+</Definition>
 
 <Drawio
     file="control-001.drawio"
@@ -39,11 +37,11 @@ This set of *devices/components/elements* could be **sensors** and **actuators**
 
 ### Plant
 
-<Definition
-    term="Plan"
-    definition="A plant may be a piece of equipment, perhaps just a set of machine parts functioning together, the purpose of which is to perform a particular operation."
-    source="Modern Control Engineering 5th edition by Katsuhiko Ogata"
-/>
+<Definition term="Plan">
+A plant may be a piece of equipment, perhaps just a set of machine parts functioning together, the purpose of which is to perform a particular operation.
+
+Source: Modern Control Engineering 5th edition by Katsuhiko Ogata
+</Definition>
 
 Any controllable device or object can be referred to as a plant.
 
@@ -59,37 +57,37 @@ Ogata refers to "process" as any operation to be controlled.
 
 ### Disturbances
 
-<Definition
-    term="Disturbances"
-    definition="A disturbance is a signal that tends to **adversely** affect the value of the output of a system. If a disturbance is generated within the system, it is called *internal*, while an *external* disturbance is generated outside the system and is an input."
-    source="Modern Control Engineering 5th edition by Katsuhiko Ogata"
-/>
+<Definition term="Disturbances">
+A disturbance is a signal that tends to **adversely** affect the value of the output of a system. If a disturbance is generated within the system, it is called *internal*, while an *external* disturbance is generated outside the system and is an input."
+
+Source: Modern Control Engineering 5th edition by Katsuhiko Ogata
+</Definition>
 
 
 ### Sensor
 
-<Definition
-    term="Sensor"
-    definition="Device that receives and responds to a signal or stimulus."
-    source="Handbook of modern sensors: physics, designs, and applications by Jacob Fraden"
-/>
+<Definition term="Sensor">
+Device that receives and responds to a signal or stimulus.
+
+Source: Handbook of modern sensors: physics, designs, and applications by Jacob Fraden
+</Definition>
 
 
-<Definition
-    term="Sensor"
-    definition="A sensor is a device that receives a physical, chemical, or biological stimulus and responds with a quantification of this stimulus in the form of a signal that can be interpreted, transmitted and/or stored."
-    source="Own definition influenced by Chapter 1, Data Acquisition Handbook of modern sensors."
-/>
+<Definition term="Sensor">
+A sensor is a device that receives a physical, chemical, or biological stimulus and responds with a quantification of this stimulus in the form of a signal that can be interpreted, transmitted and/or stored.
+
+Source: Own definition influenced by Chapter 1, Data Acquisition Handbook of modern sensors.
+</Definition>
 
 Sensor: quantifying physical properties
 
 ### Actuator
 
-<Definition
-    term="Actuator"
-    definition="An actuator is a device that converts energy (typically electrical, hydraulic, or pneumatic)"
-    source="Own definition influenced by Chapter 1, Data Acquisition Handbook of modern sensors."
-/>
+<Definition term="Actuator">
+An actuator is a device that converts energy (typically electrical, hydraulic, or pneumatic)
+
+Own definition influenced by Chapter 1, Data Acquisition Handbook of modern sensors."
+</Definition>
 
 ## System Cofigurations
 
@@ -193,7 +191,6 @@ Types of responses:
 - LabView
 - Python
 
-</Presentation>
 
 ## References
 
