--- a/src/content/docs/en/music/beethoven.mdx
+++ b/src/content/docs/en/music/beethoven.mdx
@@ -1,5 +1,6 @@
 ---
 title: Ludwig van Beethoven
+description: A collection of stories related to music
 ---
 
 [The "Complete" Beethoven](https://www.completebeethoven.com/index.html)
