update cpp note

--- a/src/content/docs/en/cpp.mdx
+++ b/src/content/docs/en/cpp.mdx
@@ -21,13 +21,20 @@ Software requirements:
 - [Basics of the language](cpp-basics)
 - [Standard Library (STL)](cpp-stl)
 
-## Module 2 - Common Libraries
+## Module 2 - Utilities
 
 - [List of common Libraries](cpp-libraries)
+- [Idioms](cpp-idioms)
 
 ## Module 3 - Extras
 
 - [Executable and Linking Format (ELF)](elf)
+    - [Under The Hood Of Executables](https://mohitmishra786.github.io/underTheHoodOfExecutables/?page=INDEX.md)
+    - [Shared Libraries: Understanding Dynamic Loading](https://amirrachum.com/shared-libraries/)
+- Make.
+    - [Learn Makefiles](https://makefiletutorial.com/#getting-started)
+- CMake.
+- OS concepts. [Daily OS Explorations](https://mohitmishra786.github.io/exploring-os/src/) by Mohit aka Chessman
 
 Memory unsafe languages:
 - How linux can be safe using C: [How Linux is built with Greg Kroah-Hartman](https://youtu.be/7WbREHtc5sU?t=4089)
