--- a/src/content/docs/en/notation.mdx
+++ b/src/content/docs/en/notation.mdx
@@ -7,20 +7,34 @@ title: "Notation"
 | Description | Representation | Command |
 | --- | --- | --- |
 | Scalar | $a$ | `a` |
-| Vector | $\va$ | `\va` |
+| Vector | $\vx$ | `\va` |
+| Unit vector | $\uvx$ | `\uvx` |
 | Matrix | $\mA$ | `\mA` |
 | Tensor | $\tA$ | `\tA` |
+| Standard number systems | $\R, \Z, \Q, \C, \N$ | `\R, \Z, \Q, \C, \N` |
 
 ## Set and Graphs
 
 | Description | Representation | Command |
 | --- | --- | --- |
 | Set | $\sA$ | `\sA` |
-| Set of real numbers | $\sR$ | `\sR` |
+| Set complement | $\scA$ | `\scA` |
+| Family of sets | $\ssA$ | `\ssA` |
 | Set containing $0$ and $1$ | $\{0, 1\}$ | `\{0, 1\}` |
 | Set of all integers between $0$ and $n$ | $\{0, 1, \dots, n\}$ | `\{0, 1, \dots, n\}` |
 | Real interval including $a$ and $b$ | $[a, b]$ | [a, b] |
 | Real interval excluding $a$ but including $b$ | $(a, b]$ | (a, b] |
+
+## Probability
+
+| Description | Representation | Command |
+| --- | --- | --- |
+| Random Variable | $\rvA$ | `\rvA` |
+| Random Vector | $\rvecA$ | `\rvecA` |
+| Distribution | |
+| Expectation | |
+| Probability | |
+| Variance | |
 
 ## Geometry
 
