--- a/src/content/docs/en/notation.mdx
+++ b/src/content/docs/en/notation.mdx
@@ -32,9 +32,9 @@ title: "Notation"
 | Random Variable | $\rvA$ | `\rvA` |
 | Random Vector | $\rvecA$ | `\rvecA` |
 | Distribution | |
-| Expectation | |
-| Probability | |
-| Variance | |
+| Expectation | $\E{\rvX}$ | `\E{\rvX}` |
+| Variance | $\Var{\rvX}$ | `\Var{\rvX}` |
+| Probability | $\Prob{\rvX}$ | `\Prob{\rvX}` |
 
 ## Geometry
 
