--- a/src/content/docs/en/notation.mdx
+++ b/src/content/docs/en/notation.mdx
@@ -34,6 +34,7 @@ title: "Notation"
 | Distribution | |
 | Expectation | $\E{\rvX}$ | `\E{\rvX}` |
 | Variance | $\Var{\rvX}$ | `\Var{\rvX}` |
+| Cov | $\Cov{\rvX}$ | `\Cov{\rvX}` |
 | Probability | $\Prob{\rvX}$ | `\Prob{\rvX}` |
 
 ## Geometry
